--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Nowa strona WWW</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="https://getbootstrap.com/"></a>bootstrap</li>
+        <li><a href="https://pl.wordpress.org/"></a>wordpress</li>
+        <li><a href="https://gulpjs.com/"></a>gulp</li>
+      </ul>
+    </nav>
+  </body>
 </html>
