--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Nowa strona WWW</title>
 </head>
 <body>
-    
+    <article>
+        <h2>Article</h2>
+        <p>Tu jest artykuł</p>
+    </article>
 </body>
 </html>
