--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <li><a href="https://gulpjs.com/"></a>gulp</li>
       </ul>
     </nav>
-
+<header>
+  <h1>Lorem Ipsum</h1>
+  <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dicta optio exercitationem corporis laudantium consequatur quae? Voluptatem ab accusamus deleniti consequatur sed dolores, atque, laudantium autem harum non provident molestias.</h2>
+</header>
     <div class="main-content">
       <section class="first-sec">
         <h2>Nagłówek pierwszej sekcji</h2>
