--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
         <h2>Article</h2>
         <p>Tu jest artykuł</p>
     </article>
+    <footer><address>test</address></footer>
   </body>
 </html>
