--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </ul>
     </nav>
 <header>
-  <h1>Lorem Ipsum</h1>
+  <h1>Testowy nagłówek</h1>
   <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dicta optio exercitationem corporis laudantium consequatur quae? Voluptatem ab accusamus deleniti consequatur sed dolores, atque, laudantium autem harum non provident molestias.</h2>
 </header>
     <div class="main-content">
