--- a/index.html
+++ b/index.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Nowa strona WWW</title>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="https://getbootstrap.com/"></a>bootstrap</li>
-        <li><a href="https://pl.wordpress.org/"></a>wordpress</li>
-        <li><a href="https://gulpjs.com/"></a>gulp</li>
-      </ul>
-    </nav>
-<header>
-  <h1>Testowy nagłówek</h1>
-  <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dicta optio exercitationem corporis laudantium consequatur quae? Voluptatem ab accusamus deleniti consequatur sed dolores, atque, laudantium autem harum non provident molestias.</h2>
-</header>
-    <div class="main-content">
-      <section class="first-sec">
-        <h2>Nagłówek pierwszej sekcji</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum
-          labore, expedita officia officiis sunt repellat nihil modi cupiditate,
-          dolorem odit aspernatur voluptatibus atque enim harum numquam. Laborum
-          ut sunt adipisci?
-        </p>
-      </section>
-      <section class="second-sec">
-        <h2>Nagłówek drugiej sekcji</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et autem aut
-          beatae, enim est exercitationem voluptatibus ex, necessitatibus
-          tempore quo sapiente. Obcaecati recusandae, alias ipsum nihil
-          laudantium reprehenderit officiis atque?
-        </p>
-      </section>
-    </div>
-    <aside>
-        <img src="https://cdn1.epicgames.com/ue/item/ExplosionsMegaPack_Screenshot_01-1920x1080-ce82a7911a26371bdf25d426b374e7c9.png" alt="Lorem ipsum">
-    </aside>
-    <article>
-        <h2>Nowy Artykuł</h2>
-        <p>Tu jest artykuł</p>
-    </article>
-    <footer><address>test</address></footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Nowa strona WWW</title>
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li><a href="https://getbootstrap.com/"></a>bootstrap</li>
+      <li><a href="https://pl.wordpress.org/"></a>wordpress</li>
+      <li><a href="https://gulpjs.com/"></a>gulp</li>
+    </ul>
+  </nav>
+  <header>
+    <h1>Testowy nagłówek</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dicta optio exercitationem corporis
+      laudantium consequatur quae? Voluptatem ab accusamus deleniti consequatur sed dolores, atque, laudantium autem
+      harum non provident molestias.</h2>
+  </header>
+  <div class="main-content">
+    <section class="first-sec">
+      <h2>Nowy nagłówek pierwszej sekcji</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum
+        labore, expedita officia officiis sunt repellat nihil modi cupiditate,
+        dolorem odit aspernatur voluptatibus atque enim harum numquam. Laborum
+        ut sunt adipisci?
+      </p>
+    </section>
+    <section class="second-sec">
+      <h2>Nowy nagłówek drugiej sekcji</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et autem aut
+        beatae, enim est exercitationem voluptatibus ex, necessitatibus
+        tempore quo sapiente. Obcaecati recusandae, alias ipsum nihil
+        laudantium reprehenderit officiis atque?
+      </p>
+    </section>
+  </div>
+  <aside>
+    <img
+      src="https://cdn1.epicgames.com/ue/item/ExplosionsMegaPack_Screenshot_01-1920x1080-ce82a7911a26371bdf25d426b374e7c9.png"
+      alt="Lorem ipsum">
+  </aside>
+  <article>
+    <h2>Nowy Artykuł</h2>
+    <p>Tu jest artykuł</p>
+  </article>
+  <footer>
+    <address>test</address>
+  </footer>
+</body>
+
 </html>
