--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
       <p>Tu jest artykuł</p>
     </article>
     <footer>
-      <address>test</address>
+      <address>Kancelaria Prezydenta Rzeczypospolitej Polskiej <br>
+        ul. Wiejska 10 <br>
+        00-902 Warszawa <br>
+        Telefon: (48 22) 695-29-00 <br>
+        Fax: (48 22) 695-22-38</address>
     </footer>
   </body>
 </html>
